# cookbook-rag-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rag_demo.py  server.py
docs/: plan.md
web/: index.html
