[project]
name = "rag-lecture-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "chromadb>=1.5.9",
    "fastapi>=0.118.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.38.0",
]
